Fixes various docs pages

--- a/docs/docs/cmd/spo/orgnewssite/orgnewssite-set.mdx
+++ b/docs/docs/cmd/spo/orgnewssite/orgnewssite-set.mdx
@@ -25,7 +25,7 @@ Using the `-u, --url` option you can specify which site to add to the list of or
 
 :::info
 
-To use this command you have to have permissions to access the tenant admin site.
+To use this command you must be either **SharePoint Administrator** or **Global Administrator**.
 
 :::
     
