--- a/docs/docs/cmd/spo/site/site-commsite-enable.mdx
+++ b/docs/docs/cmd/spo/site/site-commsite-enable.mdx
@@ -29,7 +29,7 @@ m365 spo site commsite enable [options]
 
 :::info
 
-To use this command you have to have permissions to access the tenant admin site.
+To use this command you must be either **SharePoint Administrator** or **Global Administrator**.
 
 :::
 
