--- a/docs/docs/cmd/spo/site/site-list.mdx
+++ b/docs/docs/cmd/spo/site/site-list.mdx
@@ -173,6 +173,7 @@ m365 spo site list --includeOneDriveSites
       "SharingLockDownEnabled": false,
       "ShowPeoplePickerSuggestionsForGuestUsers": false,
       "SiteDefinedSharingCapability": 1,
+      "SiteId": "/Guid(a7c46398-494d-4a8d-b0db-f6e58432eb67)/",
       "SocialBarOnSitePagesDisabled": false,
       "Status": "Active",
       "StorageMaximumLevel": 1048576,
@@ -205,10 +206,10 @@ m365 spo site list --includeOneDriveSites
   <TabItem value="CSV">
 
   ```csv
-  _ObjectType_;_ObjectIdentity_;AllowDownloadingNonWebViewableFiles;AllowEditing;AllowSelfServiceUpgrade;AnonymousLinkExpirationInDays;AuthenticationContextLimitedAccess;AverageResourceUsage;BlockDownloadLinksFileType;BlockDownloadPolicy;BlockGuestsAsSiteAdmin;ClearRestrictedAccessControl;CommentsOnSitePagesDisabled;CompatibilityLevel;ConditionalAccessPolicy;CurrentResourceUsage;DefaultLinkPermission;DefaultLinkToExistingAccess;DefaultLinkToExistingAccessReset;DefaultShareLinkRole;DefaultShareLinkScope;DefaultSharingLinkType;DenyAddAndCustomizePages;DisableAppViews;DisableCompanyWideSharingLinks;DisableFlows;ExcludeBlockDownloadPolicySiteOwners;ExternalUserExpirationInDays;GroupId;HasHolds;HubSiteId;IsGroupOwnerSiteAdmin;IsHubSite;IsTeamsChannelConnected;IsTeamsConnected;LastContentModifiedDate;Lcid;LimitedAccessFileType;ListsShowHeaderAndNavigation;LockState;LoopDefaultSharingLinkRole;LoopDefaultSharingLinkScope;LoopOverrideSharingCapability;LoopSharingCapability;MediaTranscription;OverrideBlockUserInfoVisibility;OverrideSharingCapability;OverrideTenantAnonymousLinkExpirationPolicy;OverrideTenantExternalUserExpirationPolicy;Owner;PWAEnabled;ReadOnlyAccessPolicy;ReadOnlyForBlockDownloadPolicy;ReadOnlyForUnmanagedDevices;RelatedGroupId;RequestFilesLinkEnabled;RequestFilesLinkExpirationInDays;RestrictedAccessControl;RestrictedToRegion;SandboxedCodeActivationCapability;SensitivityLabel;SetOwnerWithoutUpdatingSecondaryAdmin;SharingCapability;SharingDomainRestrictionMode;SharingLockDownCanBeCleared;SharingLockDownEnabled;ShowPeoplePickerSuggestionsForGuestUsers;SiteDefinedSharingCapability;SocialBarOnSitePagesDisabled;Status;StorageMaximumLevel;StorageUsage;StorageWarningLevel;TeamsChannelType;Template;TimeZoneId;Title;Url;UserCodeMaximumLevel;UserCodeWarningLevel;WebsCount
-  Microsoft.Online.SharePoint.TenantAdministration.SiteProperties;"0a05bfa0-c046-6000-c2a5-1da5123cf537|908bed80-a04a-4433-b4a0-883d9847d110:1e852b49-bf4b-4ba5-bcd4-a8c4706c8ed4
-  SiteProperties
-  https%3a%2f%2fcontoso.sharepoint.com%2fsites%2fteam1";;;1;0;;0;0;;0;;;15;0;0;0;;;0;0;0;2;0;0;0;;0;/Guid(00000000-0000-0000-0000-000000000000)/;;/Guid(5337976b-b560-4b64-b3fa-8eaf0339501a)/;;;;;/Date(2023,5,6,12,43,38,333)/;1033;0;;Unlock;0;0;;0;0;0;;;;john@contoso.onmicrosoft.com;1;;;;/Guid(00000000-0000-0000-0000-000000000000)/;;0;;3;0;/Guid(00000000-0000-0000-0000-000000000000)/;;0;0;;;;0;;Active;1048576;10;1022361;0;SITEPAGEPUBLISHING#0;13;Give @ Contoso;https://contoso.sharepoint.com/sites/team1;300;200;0
+  _ObjectType_,_ObjectIdentity_,AllowDownloadingNonWebViewableFiles,AllowEditing,AllowSelfServiceUpgrade,AnonymousLinkExpirationInDays,ApplyToExistingDocumentLibraries,ApplyToNewDocumentLibraries,ArchivedBy,ArchivedTime,ArchiveStatus,AuthContextStrength,AuthenticationContextLimitedAccess,AuthenticationContextName,AverageResourceUsage,BlockDownloadLinksFileType,BlockDownloadMicrosoft365GroupIds,BlockDownloadPolicy,BlockDownloadPolicyFileTypeIds,BlockGuestsAsSiteAdmin,BonusDiskQuota,ClearGroupId,ClearRestrictedAccessControl,CommentsOnSitePagesDisabled,CompatibilityLevel,ConditionalAccessPolicy,CurrentResourceUsage,DefaultLinkPermission,DefaultLinkToExistingAccess,DefaultLinkToExistingAccessReset,DefaultShareLinkRole,DefaultShareLinkScope,DefaultSharingLinkType,DenyAddAndCustomizePages,Description,DisableAppViews,DisableCompanyWideSharingLinks,DisableFlows,EnableAutoExpirationVersionTrim,ExcludeBlockDownloadPolicySiteOwners,ExpireVersionsAfterDays,ExternalUserExpirationInDays,GroupId,GroupOwnerLoginName,HasHolds,HubSiteId,IBMode,IBSegments,IBSegmentsToAdd,IBSegmentsToRemove,InheritVersionPolicyFromTenant,IsGroupOwnerSiteAdmin,IsHubSite,IsTeamsChannelConnected,IsTeamsConnected,LastContentModifiedDate,Lcid,LimitedAccessFileType,ListsShowHeaderAndNavigation,LockIssue,LockReason,LockState,LoopDefaultSharingLinkRole,LoopDefaultSharingLinkScope,MajorVersionLimit,MajorWithMinorVersionsLimit,MediaTranscription,OverrideBlockUserInfoVisibility,OverrideSharingCapability,OverrideTenantAnonymousLinkExpirationPolicy,OverrideTenantExternalUserExpirationPolicy,Owner,OwnerEmail,OwnerLoginName,OwnerName,PWAEnabled,ReadOnlyAccessPolicy,ReadOnlyForBlockDownloadPolicy,ReadOnlyForUnmanagedDevices,RelatedGroupId,RequestFilesLinkEnabled,RequestFilesLinkExpirationInDays,RestrictContentOrgWideSearch,RestrictedAccessControl,RestrictedAccessControlGroups,RestrictedAccessControlGroupsToAdd,RestrictedAccessControlGroupsToRemove,RestrictedToRegion,SandboxedCodeActivationCapability,SensitivityLabel,SensitivityLabel2,SetOwnerWithoutUpdatingSecondaryAdmin,SharingAllowedDomainList,SharingBlockedDomainList,SharingCapability,SharingDomainRestrictionMode,SharingLockDownCanBeCleared,SharingLockDownEnabled,ShowPeoplePickerSuggestionsForGuestUsers,SiteDefinedSharingCapability,SiteId,SocialBarOnSitePagesDisabled,Status,StorageMaximumLevel,StorageQuotaType,StorageUsage,StorageWarningLevel,TeamsChannelType,Template,TimeZoneId,Title,TitleTranslations,Url,UserCodeMaximumLevel,UserCodeWarningLevel,WebsCount
+  Microsoft.Online.SharePoint.TenantAdministration.SiteProperties,"7f934fa1-20ab-9000-f15c-df8f2970f555|908bed80-a04a-4433-b4a0-883d9847d110:18c58817-3bc9-489d-ac63-f7264fb357e5
+SiteProperties
+https%3a%2f%2fcontoso.sharepoint.com%2fsites%2fteam1",,,1,0,,,,"/Date(1,0,1,0,0,0,0)/",NotArchived,,,,0,0,,,,0,0,,,,15,0,0,0,,,0,0,0,2,,0,0,0,,,0,0,/Guid(004db326-a1de-4c5e-ad45-746fd89f57bb)/,,,/Guid(00000000-0000-0000-0000-000000000000)/,,,,,,,,,,"/Date(2024,6,17,21,54,44,437)/",1033,0,,,0,Unlock,0,0,0,0,0,0,,,,,,,,1,,,,/Guid(004db326-a1de-4c5e-ad45-746fd89f57bb)/,,0,,,,,,3,0,/Guid(00000000-0000-0000-0000-000000000000)/,,,,,1,0,,,,1,/Guid(a7c46398-494d-4a8d-b0db-f6e58432eb67)/,,Active,26214400,,1,25574400,0,GROUP#0,3,team1,,https://contoso.sharepoint.com/sites/team1,300,200,0
   ```
 
   </TabItem>
@@ -291,6 +292,7 @@ m365 spo site list --includeOneDriveSites
   SharingLockDownEnabled | false
   ShowPeoplePickerSuggestionsForGuestUsers | false
   SiteDefinedSharingCapability | 0
+  SiteId | /Guid(a7c46398-494d-4a8d-b0db-f6e58432eb67)/,
   SocialBarOnSitePagesDisabled | false
   Status | Active
   StorageMaximumLevel | 0
