--- a/docs/docs/cmd/spo/storageentity/storageentity-set.mdx
+++ b/docs/docs/cmd/spo/storageentity/storageentity-set.mdx
@@ -39,7 +39,7 @@ If you specify the URL of a site different than the app catalog, you will get an
 
 :::info
 
-To use this command you have to have permissions to access the tenant admin site.
+To use this command you must be either **SharePoint Administrator** or **Global Administrator**.
 
 :::
 
