--- a/docs/docs/cmd/spo/tenant/tenant-recyclebinitem-remove.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-recyclebinitem-remove.mdx
@@ -31,7 +31,7 @@ Removing a site collection is by default asynchronous and depending on the curre
 
 :::info
 
-To use this command you have to have permissions to access the tenant admin site.
+To use this command you must be either **SharePoint Administrator** or **Global Administrator**.
 
 :::
     
