--- a/docs/docs/cmd/spo/theme/theme-set.mdx
+++ b/docs/docs/cmd/spo/theme/theme-set.mdx
@@ -67,7 +67,7 @@ If any of these checks fails you are presented with a `The specified theme is no
 
 :::info
 
-To use this command you have to have permissions to access the tenant admin site.
+To use this command you must be either **SharePoint Administrator** or **Global Administrator**.
 
 :::
     
