--- a/docs/docs/cmd/spp/contentcenter/contentcenter-list.mdx
+++ b/docs/docs/cmd/spp/contentcenter/contentcenter-list.mdx
@@ -9,12 +9,10 @@ Gets information about the SharePoint Premium content centers
 ## Usage
 
 ```sh
-spp contentcenter list
+m365 spp contentcenter list [options]
 ```
 
 ## Options
-
-No options required
 
 <Global />
 
@@ -22,7 +20,7 @@ No options required
 
 :::info
 
-To use this command you have to have permissions to access the tenant admin site.
+To use this command you must be either **SharePoint Administrator** or **Global Administrator**.
 
 :::
 
