--- a/docs/docs/cmd/spo/cdn/cdn-origin-add.mdx
+++ b/docs/docs/cmd/spo/cdn/cdn-origin-add.mdx
@@ -28,7 +28,7 @@ Using the `-t, --type` option you can choose whether you want to manage the sett
 
 :::info
 
-To use this command you have to have permissions to access the tenant admin site.
+To use this command you must be either **SharePoint Administrator** or **Global Administrator**.
 
 :::
     
