--- a/docs/docs/cmd/spo/cdn/cdn-policy-list.mdx
+++ b/docs/docs/cmd/spo/cdn/cdn-policy-list.mdx
@@ -27,7 +27,7 @@ Using the `-t, --cdnType` option you can choose whether you want to manage the s
 
 :::info
 
-To use this command you have to have permissions to access the tenant admin site.
+To use this command you must be either **SharePoint Administrator** or **Global Administrator**.
 
 :::
 
