--- a/docs/docs/cmd/spo/externaluser/externaluser-list.mdx
+++ b/docs/docs/cmd/spo/externaluser/externaluser-list.mdx
@@ -37,7 +37,7 @@ m365 spo externaluser list [options]
 
 :::info
 
-To use this command you have to have permissions to access the tenant admin site.
+To use this command you must be either **SharePoint Administrator** or **Global Administrator**.
 
 :::
 
