--- a/docs/docs/cmd/spo/hidedefaultthemes/hidedefaultthemes-set.mdx
+++ b/docs/docs/cmd/spo/hidedefaultthemes/hidedefaultthemes-set.mdx
@@ -23,7 +23,7 @@ m365 spo hidedefaultthemes set [options]
 
 :::info
 
-To use this command you have to have permissions to access the tenant admin site.
+To use this command you must be either **SharePoint Administrator** or **Global Administrator**.
 
 :::
 
