--- a/docs/docs/cmd/spo/knowledgehub/knowledgehub-set.mdx
+++ b/docs/docs/cmd/spo/knowledgehub/knowledgehub-set.mdx
@@ -27,7 +27,7 @@ If the specified url doesn't refer to an existing site collection, you will get 
 
 :::info
 
-To use this command you have to have permissions to access the tenant admin site.
+To use this command you must be either **SharePoint Administrator** or **Global Administrator**.
 
 :::
     
