--- a/docs/docs/cmd/spo/orgassetslibrary/orgassetslibrary-remove.mdx
+++ b/docs/docs/cmd/spo/orgassetslibrary/orgassetslibrary-remove.mdx
@@ -28,7 +28,7 @@ m365 spo orgassetslibrary remove [options]
 
 :::info
 
-To use this command you have to have permissions to access the tenant admin site.
+To use this command you must be either **SharePoint Administrator** or **Global Administrator**.
 
 :::
 
