--- a/docs/docs/cmd/spo/site/site-appcatalog-remove.mdx
+++ b/docs/docs/cmd/spo/site/site-appcatalog-remove.mdx
@@ -25,7 +25,7 @@ While the command uses the term *'remove'*, like its equivalent PowerShell cmdle
 
 :::info
 
-To use this command you have to have permissions to access the tenant admin site.
+To use this command you must be either **SharePoint Administrator** or **Global Administrator**.
 
 :::
     
