--- a/docs/docs/cmd/spo/site/site-set.mdx
+++ b/docs/docs/cmd/spo/site/site-set.mdx
@@ -103,7 +103,7 @@ Setting site properties is by default asynchronous and depending on the current 
 
 :::info
 
-To use this command you have to have permissions to access the tenant admin site.
+To use this command you must be either **SharePoint Administrator** or **Global Administrator**.
 
 :::
     
