--- a/docs/docs/cmd/spo/storageentity/storageentity-remove.mdx
+++ b/docs/docs/cmd/spo/storageentity/storageentity-remove.mdx
@@ -31,7 +31,7 @@ Tenant properties are stored in the app catalog site associated with that tenant
 
 :::info
 
-To use this command you have to have permissions to access the tenant admin site.
+To use this command you must be either **SharePoint Administrator** or **Global Administrator**.
 
 :::
     
