--- a/docs/docs/cmd/spo/tenant/tenant-appcatalog-add.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-appcatalog-add.mdx
@@ -41,7 +41,7 @@ Creating an app catalog site might take a while. If you need to wait for the sit
 
 :::info
 
-To use this command you have to have permissions to access the tenant admin site.
+To use this command you must be either **SharePoint Administrator** or **Global Administrator**.
 
 :::
     
