--- a/docs/docs/cmd/spo/tenant/tenant-recyclebinitem-list.mdx
+++ b/docs/docs/cmd/spo/tenant/tenant-recyclebinitem-list.mdx
@@ -20,7 +20,7 @@ m365 spo tenant recyclebinitem list [options]
 
 :::info
 
-To use this command you have to have permissions to access the tenant admin site.
+To use this command you must be either **SharePoint Administrator** or **Global Administrator**.
 
 :::
 
