--- a/docs/docs/cmd/spo/theme/theme-apply.mdx
+++ b/docs/docs/cmd/spo/theme/theme-apply.mdx
@@ -33,7 +33,7 @@ Following standard SharePoint themes are supported by the CLI for Microsoft 365:
 
 :::info
 
-To use this command you have to have permissions to access the tenant admin site.
+To use this command you must be either **SharePoint Administrator** or **Global Administrator**.
 
 :::
     
