--- a/docs/docs/cmd/spo/theme/theme-get.mdx
+++ b/docs/docs/cmd/spo/theme/theme-get.mdx
@@ -25,7 +25,7 @@ m365 spo theme get [options]
 
 :::info
 
-To use this command you have to have permissions to access the tenant admin site.
+To use this command you must be either **SharePoint Administrator** or **Global Administrator**.
 
 :::
 
