--- a/docs/docs/cmd/spo/theme/theme-remove.mdx
+++ b/docs/docs/cmd/spo/theme/theme-remove.mdx
@@ -26,7 +26,7 @@ m365 spo theme remove [options]
 
 :::info
 
-To use this command you have to have permissions to access the tenant admin site.
+To use this command you must be either **SharePoint Administrator** or **Global Administrator**.
 
 :::
 
