Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -32,6 +32,8 @@ sidebar_position: 3
 - fixed 'VersionPolicies' on generic list. [#6264](https://github.com/pnp/cli-microsoft365/issues/6264)
 - fixed user retrieval using the correct property. [#6308](https://github.com/pnp/cli-microsoft365/issues/6308)
 - enhanced [spo user get](../cmd/spo/user/user-get.mdx) with extra options. [#5516](https://github.com/pnp/cli-microsoft365/issues/5516)
+- fixed logging in with passwordless certificate. [#6337](https://github.com/pnp/cli-microsoft365/issues/6337)
+- fixed serializing bool values in CSV output. [#6326](https://github.com/pnp/cli-microsoft365/issues/6326)
 
 ## [v9.0.0](https://github.com/pnp/cli-microsoft365/releases/tag/v9.0.0)
 
