--- a/docs/docs/sample-scripts/entra/bulk-manage-group-users/index.mdx
+++ b/docs/docs/sample-scripts/entra/bulk-manage-group-users/index.mdx
@@ -39,11 +39,11 @@ Note: Refactor the code as per your requirement.
       If ($action -eq "add") {
 
           If ($role -eq "owner") {
-              m365 entra m365group user add --groupId $group.id --userName $user.mail --role Owner
+              m365 entra m365group user add --groupId $group.id --userNames $user.mail --role Owner
               Write-Host $user.mail " added as owner in " $group.mailNickname
           }
           ElseIf ($role -eq "member") {
-              m365 entra m365group user add --groupId $group.id --userName $user.mail
+              m365 entra m365group user add --groupId $group.id --userNames $user.mail
               Write-Host $user.mail " added as member in " $group.mailNickname
           }
           Else {
