Removes command 'cli reconsent'. Closes #6360

--- a/docs/docs/v10-upgrade-guidance.mdx
+++ b/docs/docs/v10-upgrade-guidance.mdx
@@ -12,6 +12,12 @@ We updated the [app permission add](./cmd/app/permission/permission-add.mdx) com
 
 Please, check the documentation of the [app permission add](./cmd/app/permission/permission-add.mdx) command to see the updated options and adjust your scripts accordingly.
 
+## CLI
+
+### Removed command `cli reconsent`
+
+The `cli reconsent` command was removed. This command was removed due to the removal of the PnP Management Shell service application.
+
 ## CLI configuration
 
 ### Removed setting `showSpinner`
