Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -8,6 +8,10 @@ sidebar_position: 3
 
 ### New commands
 
+**File:**
+
+- [file move](../cmd/file/file-move.mdx) - moves a file to another location using the Microsoft Graph [#4607](https://github.com/pnp/cli-microsoft365/issues/4607)
+
 **Power Automate:**
 
 - [flow recyclebinitem list](../cmd/flow/recyclebinitem/recyclebinitem-list.mdx) - lists all soft-deleted Power Automate flows within an environment [#6139](https://github.com/pnp/cli-microsoft365/issues/6139)
@@ -19,10 +23,15 @@ sidebar_position: 3
 - [spo folder sharinglink clear](../cmd/spo/folder/folder-sharinglink-clear.mdx) - removes all sharing links of a folder [#5965](https://github.com/pnp/cli-microsoft365/issues/5965)
 - [spo folder sharinglink remove](../cmd/spo/folder/folder-sharinglink-remove.mdx) - removes a sharing links from a folder [#5966](https://github.com/pnp/cli-microsoft365/issues/5966)
 - [spo site admin add](../cmd/spo/site/site-admin-add.mdx) - adds a user or group as a site collection administrator [#5883](https://github.com/pnp/cli-microsoft365/issues/5883)
+- [spo site admin remove](../cmd/spo/site/site-admin-remove.mdx) - removes a user or group as site collection administrator [#5884](https://github.com/pnp/cli-microsoft365/issues/5884)
 
 **SharePoint Premium:**
 
 - [spp contentcenter list](../cmd/spp/contentcenter/contentcenter-list.mdx) - gets the URLs of the SharePoint Premium content centers [#6101](https://github.com/pnp/cli-microsoft365/issues/6101)
+
+**Teams:**
+
+- [teams meeting transcript get](../cmd/teams/meeting/meeting-transcript-get.mdx) - downloads a transcript for a given meeting [#3908](https://github.com/pnp/cli-microsoft365/issues/3908)
 
 ### Changes
 
@@ -34,6 +43,9 @@ sidebar_position: 3
 - enhanced [spo user get](../cmd/spo/user/user-get.mdx) with extra options. [#5516](https://github.com/pnp/cli-microsoft365/issues/5516)
 - fixed logging in with passwordless certificate. [#6337](https://github.com/pnp/cli-microsoft365/issues/6337)
 - fixed serializing bool values in CSV output. [#6326](https://github.com/pnp/cli-microsoft365/issues/6326)
+- fixed mistakes in doc pages.
+- added support for SPFx v1.20.0-rc.1. [#6301](https://github.com/pnp/cli-microsoft365/issues/6301)
+- fixed login command. [#6334](https://github.com/pnp/cli-microsoft365/issues/6334)
 
 ## [v9.0.0](https://github.com/pnp/cli-microsoft365/releases/tag/v9.0.0)
 
