Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -25,6 +25,7 @@ sidebar_position: 3
 - removed all `yammer` command aliases [#5764](https://github.com/pnp/cli-microsoft365/issues/5764)
 - removed `showSpinner` config variable [#6126](https://github.com/pnp/cli-microsoft365/issues/6126)
 - aligned options of `spo contenttype field` commands [#6170](https://github.com/pnp/cli-microsoft365/issues/6170)
+- enhanced the output of 'spo sitescript get'. [#5559](https://github.com/pnp/cli-microsoft365/issues/5559)
 
 ## v9.1.0 (beta)
 
