Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -46,6 +46,7 @@ sidebar_position: 3
 - fixed mistakes in doc pages.
 - added support for SPFx v1.20.0-rc.1. [#6301](https://github.com/pnp/cli-microsoft365/issues/6301)
 - fixed login command. [#6334](https://github.com/pnp/cli-microsoft365/issues/6334)
+- refactored leftover files of codebase to async/await [#5147](https://github.com/pnp/cli-microsoft365/issues/5147)
 
 ## [v9.0.0](https://github.com/pnp/cli-microsoft365/releases/tag/v9.0.0)
 
