Renames 'site rename' to 'tenant site rename'. Closes #6142

--- a/docs/docs/v10-upgrade-guidance.mdx
+++ b/docs/docs/v10-upgrade-guidance.mdx
@@ -249,6 +249,14 @@ We updated the output from the [`spo sitescript get`](./cmd/spo/sitescript/sites
 
 Please update your scripts to reflect the new output of the [`spo sitescript get`](./cmd/spo/sitescript/sitescript-get.mdx) command.
 
+### Renamed `spo site rename` to `spo tenant site rename`
+
+The `spo site rename` command was renamed to [`spo tenant site rename`](./cmd/spo/tenant/tenant-site-rename.mdx) to better reflect the command's purpose as this is an action that only an administrator can do.
+
+#### What action do I need to take?
+
+Please update your scripts to use the new command name.
+
 ## SharePoint Framework
 
 ### Removed overwrite option from `spfx project github workflow add` command
